# learning-app

./: .gitignore  README.md  api_plans.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  settings.json
apps/analytics/: models.py  tasks.py  todo.txt  views.py
apps/code_runner/: apps.py
apps/courses/: admin.py  filters.py  models.py  signals.py  tests.py  urls.py  views.py
apps/courses/management/commands/: seed_categories.py  seed_courses.py
apps/courses/migrations/: 0001_initial.py  0002_initial.py  0003_enrollment_progress.py
apps/lessons/: admin.py  apps.py  models.py  urls.py  views.py
apps/lessons/management/commands/: seed_lessons.py
apps/lessons/migrations/: 0001_initial.py  0002_alter_choiceoption_options.py
apps/management/commands/: seed.py
apps/notifications/: models.py  tasks.py
apps/submissions/: models.py  todo.txt  views.py
apps/submissions/checkers/: base.py  code.py  quiz.py
apps/users/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/users/management/commands/: seed_roles.py  seed_users.py
apps/users/migrations/: 0001_initial.py  0002_alter_oauthconnection_table.py  0003_profile_username_alter_profile_avatar.py  0004_alter_profile_avatar_alter_profile_username.py  0005_remove_user_first_name_remove_user_last_name_and_more.py  0006_delete_oauthconnection.py  0007_alter_profile_username.py
config/: settings.py  urls.py  views.py
eduplatform/: asgi.py  settings.py  urls.py  wsgi.py
infra/docker/: Dockerfile
static/css/: admin_custom.css  main.css
templates/: base.html
templates/courses/: about.html  catalog.html  course_detail.html  home.html  my_courses.html
templates/includes/: footer.html  navbar.html
templates/lessons/: lesson.html
templates/partials/: enroll_button.html  step_content.html
templates/users/: login.html  profile.html  profile_edit.html  public_profile.html  register.html
