[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true

[project]
name = "education-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django-debug-toolbar>=6.2.0",
    "django-extensions>=4.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "ipython>=9.10.0",
    "pillow>=12.1.1",
    "python-decouple>=3.8",
    "redis>=7.2.1",
]
